--- a/_posts/2023-12-01-love.md
+++ b/_posts/2023-12-01-love.md
@@ -4,7 +4,8 @@ title: on love
 permalink: /poop/love
 date: 2023/12/01
 date_updated: 2023/12/01
-published: false
+published: true
+hide: true
 ---
 
 For some reason I feel compelled to write about love, ironically at a time I feel most unqualified to do so. Maybe I'm trying to give myself reassurance.
