--- a/_posts/2024-02-21-on_aging.md
+++ b/_posts/2024-02-21-on_aging.md
@@ -1,13 +1,18 @@
 ---
 layout: post
-title: less scattered, more comprehensive intrusive thoughts on aging and mortality
-permalink: /poop/on_aging
+title: less scattered, more comprehensive, intrusive thoughts on aging and mortality
+permalink: /poop/on_hypey_takes
 date: 2024/02/21
 date_updated: 2024/04/06
-published: false
+published: true
 ---
 
-I have a relatively calm personality, to the point that I'm apathetic to a lot of things, and can't use tropes like 'strangers are wrong on the internet' as motivation to do things. Except it seems that my experience in the longevity field has imbued this ability in this particular field so I'd like to take this unusual opportunity and indulge it. 
+Some thoughts on current trends for posterity; I'll add this to my calendar to reevaluate in 10 years time to see how they've fared.  
+
+#longevity
+_or, typical discussions in biology that god deems unholy_
+
+I have a relatively calm personality, to the point that I'm apathetic to a lot of things, and can't use tropes like 'strangers are wrong on the internet' as motivation to do things. Except it seems that my experience in the longevity field has imbued me with this ability for this particular field so I'd like to take this unusual opportunity and indulge it. (and have it out in the open so I can point to something concrete for people to critique)
 
 ...
 
@@ -17,43 +22,87 @@ The instigator of this specific one was on this tweet, but I don't mean to pick 
 
 1. I don’t disagree that the actual tech may be relatively simple. 
 2. I very strongly disagree that it was ‘simply’ a matter of asking sufficiently correct questions  – the soft tissue of understanding ‘how’ to use a technology is a type of advancement in itself that I feel like he is underestimating/downplaying; knowledge of the arrangement and orchestration, not merely the materials themselves, i.e. gold in chip technology, ascorbic acid. 
-3. Or ‘simply’ a matter of acting with sufficient urgency - I think he’s underestimating the pervasively human fear of mortality for some reason. Are we in our own local bubbles? Given that the fountain of youth is an old trope, I feel like I'm in the right here.
+3. Or ‘simply’ a matter of acting with sufficient urgency - I think he’s underestimating the pervasively human fear of mortality for some reason. Are we in our own local bubbles? Given that the quest for the fountain of youth seems like an old trope, I feel like I'm in the right here.
 4. I agree with having not asked sufficiently correct questions, but I don't think it caused unnecessary suffering, in the implication that it was avoidable. 
 
 Let's go further and down the rabbit hole to the article he links to. For example, who is this writer? Someone who claims: 
 >“We think of aging as the product of this orphic thing called “time”, ignoring that species far less resourceful than ours live on for centuries longer, and some (like the American lobster) do not decrease in strength, do not have their metabolism slowed down, and become more rather than less fertile, with the passage of time.” 
 
-Is this saying that this is largely a matter of resourcefulness? How embarrassing.
+Is this saying that our issue of aging is largely a matter of resourcefulness? How embarrassing of us.
 
 ...
 
-If you didn't catch my sarcasm in that last line -- I'm very much joking; I strongly disagree with that premise. In a similar way that 'cancer' conflates very different phenomena, 'aging' conflates many ways of breaking. 
+If you didn't catch my sarcasm in that last line -- I'm very much joking; I strongly disagree with that premise. In fact, I'm reminded of a photo I took a picture of a text back in 2017 that conveniently illustrates a similar systems level conflation: "Why are you making so few blood cells today?" (GEB?)
 
-I am not convinced that this level of resolution is the most useful way to solve problems. I am pleased by the interest in that it should better highlight that biology is a complex system that can fail in this gradual way
+In a similar way that ['cancer' conflates very different phenomena](https://en.wikipedia.org/wiki/War_on_cancer), 'aging' conflates many ways of breaking. I am not convinced that this level of resolution is the most useful way to solve problems. Although I am hoping that the increased interest might eventually better highlight biology as a complex system in how it can fail in this gradual way.
 
+Enjoy another claim:
+>“With the longevity field booming into a multi-trillion-dollar industry, backed by names like Jeff Bezos and corporations like Alphabet, and several companies going into human trials, aging reversal is no longer a matter of if, but when.” 
+...So as long as you can throw money and status at it, it should work out, right? 
 
+Guess what pharmaceutical research involves? Throwing a lot of money at things ([_source_](https://www.nature.com/articles/nrd3681)): 
 
+[image of pharmaceutical decline]
 
-What an argument: “With the longevity field booming into a multi-trillion-dollar industry, backed by names like Jeff Bezos and corporations like Alphabet, and several companies going into human trials, aging reversal is no longer a matter of if, but when.” So as long as you can throw money and status at it, it should work out, right? 
-
-Guess what pharmaceutical research involves? Throwing a lot of money at things [insert chart]. And how well has that worked?
+Maybe we need to throw more money? Maybe there wasn't enough status.  
 
 Okay now I feel like I'm strawmanning by picking on this writer. Let's try to be more productive. 
 
-# possible points of divergence
+# likely points of divergence
 
-A cultural difference I've noticed is the belief in the unreasonable effectiveness of predicitve/statistical/probabilitstic models. Concretely, this is the GWAS supporters, 
+...by picking on someone else. 
 
-GWAS. (this also bleeds over into LLMs)
-At least one thing I took away from grad school is that there's a difference between predictive models and mechanistic/causal models -- and you cannot assume that predictve models are causally related. 
+Here's a post that's well-received by the rationalists (who presumably have better critical thinking skills than the average population), [on polygenic screening for embryos](https://www.lesswrong.com/posts/yT22RcWrxZcXyGjsA/how-to-have-polygenically-screened-children).  I believe it's gotten VC money; here's where some of the money and status has been thrown at.  
+
+It starts with GWAS -- it stands for Genome-wide Association Study. It's taking a look at the correlation between gene variants and traits. This is fine.
+The post also talks about throwing all the genetic variants into a regressor and finding a relatively sparse linear model to predict the trait. This is also fine.
+
+1) What my aesthetic/god protests/objects/outraged/what offends god's sensibilities is assuming that these predictive models are causal models. Most statistical models are not causal models. Correlation is not causation. The space of causal models is a tiny subset of well-fit statistical models. 
+
+But he has a whole subsection addressing this, you might say, trying to appease my god's wrath. Did you look at it closely? Were you able to reconstruct a solid framework in your head from it? Let's look at it again:
+>"OK", you might say. "That's well and good, but how do we know that these genetic differences are actually CAUSING someone to be taller or smarter rather than just spuriously correlated with height?"
+>
+>The main reason this is possible is because nature has already conducted a randomized control trial on our behalf. Every time your body produces a sperm or egg cell, your DNA is more or less randomly mixed up and half of it is given to the reproductive cell. This means that, conditional on parental genomes, sibling genomes are randomized! 
+>
+>In turn, this means that if a gene can predict differences between siblings, you can be quite confident that it is in fact CAUSING the difference. This is actually quite a remarkable fact, and one that underpins the entire reason for believing embryo selection should work.
+
+First, I am dubious that sibling genomes are fully randomized. Meiosis is not fully random; genes that are closer together are more likely to end up together. There is also fitness selection of both the egg and the sperm. And the egg can be picky. And then even fertilized eggs often fail. This genetic shuffling is important for adaptation, but not all genetic recombinations are viable. (An illustrative case are x-linked diseases like incontentia pigmenti. what would be the statistics on that? you should give them an x with a y chromosome to reduce risk?).
+
+He is not fully wrong in that statisticians who've thought deeply about this think you can try to infer causality from observational data (see Judea Pearl, Peter Sprites). But their recommended approach does not look like this. He's probably thinking of Mendelian randomization like this https://www.pnas.org/doi/full/10.1073/pnas.2106858119. But Mendelian randomization assumes Mendelian inheritance patterns, which polygenic traits are, almost by definition, are not. Maybe it somehow works anyway?
+
+2) And if there's anything I've learned about complex systems is that you should not assume linearities. It's also literally built into one of its definitions: a complex system is more than the sum of its parts. 
+But okay, i'll make space for it: how strong is the evidence? where is the proof
 
 
-conflation
-intuitions/metaphors of complex systems properties
-- breaking of individual vs coordination
-- 
-predictive models and mechanistic models
+I recreationally (I'm including grad school here) developing post-hoc rationalizations to explain my aesthetic in biology. 
+It so happens that it grapples with questions I compulsively obssessed  with in grad school, so I now have better words to express the intuition of why some approaches to biology are ugly.
 
+observed traits
+
+also, what have you not measured?
+i.e. red hair optimization, weight gain and other comorbidities
+
+growth and cancer -- y'all wanted to live forever right? I'm not sure if height will help. In fact, there's a negative predictor of height towards mortality -- therefore, if you decrease height, you should increase lifespan right? ?????
+
+x chromosme diseases, statistically analyze that -- what has survived
+why don't you give people marfan's syndrome/connective tissue disorders 
+
+survival of the sickest
+
+ah look twitter, you can live longer if you knock out il1
+https://en.wikipedia.org/wiki/Interleukin-1_family yes blockading it helps for overactive immune/inflammation, but what is it for? 
+https://www.jax.org/strain/003245 "Mice homozygous for the Il1rtm1Imx targeted mutation therefore fail to respond to IL1 and exhibit an altered immune response to many different target proteins. Some effects seen from knocking out this receptor include defective responses to certain inflammatory agents such as turpentine and altered response to various pathogenic organisms such as S. aureus and C. pneumoniae." functionally, how does it respond to pathogens? rather vague, versus:
+"Other observed effects include enhanced glucose homeostasis, enhanced insulin sensitivity of adipose tissue, reduction in diet-induced systemic atherosclerosis, improved restoration of normal skin architecture in wounds, increased incidence of acute convulsive seizures induced by pentylenetetrazole, and a decrease in anxiety-related behaviors."
+https://pubmed.ncbi.nlm.nih.gov/9317135/ did they even dose it with an actual pathogen? there's no horm in not reacting to a pathogen-associated signal if there's no actual pathogen: "Interestingly, ICE-/-/type I IL-1R-/- double mutant mice are resistant to high dose LPS."
+https://www.sciencedirect.com/science/article/pii/S0023683722021766 "Our data clearly indicate that IL-1 is important for the generation of early-phase protective immunity against mycobacterial infection."
+
+
+
+
+
+insurance companies
+
+biological processes as an algorithm that takes in environmental input i.e. birth order effects; trend of seeing DNA as sufficient information in itself i.e. evo
 
 
 
@@ -114,7 +163,17 @@ ground truth in reverse eng'g
 
 maybe I'm overly fixated on a certain means to an end; by valuing mechanistic understanding, but I acknowledge that you can have things working without understanding i.e. I am very grateful for corticosteroids. 
 
+---
+the problem of _continued_ alignment 
+#AI alignment
 
+I am not aligned with the AI alignment field (AI ethics sounds more legit). My non-rigorous, posthoc rationalization:
 
+Some current event samplings: Ukraine and Russia, Israel and Palestine, U.S. cultural polarization, etc.
+We can't even align ourselves (of which we have relatively many training data, and are relatively similar), and you expect to align an alien, theoretical entity? And let alone wars, we have misalignment at the family level. Psychology is unfortunately not the science it aspired to be. I suspect there might've also been high incentive to solve this type of problem throughout history. 
+
+I'm not claiming it's impossible (no opinions on that) but it looks like a harder problem than seemingly presented and the proposed solution doesn't look quite right. I also don't care to slow down this area of inquiry, because of unknown unknowns, serendipity, God works in mysterious ways, and all that. 
+
+---
 
 1. One of last few times I was memorably angry was at a centipede that scared me ('how dare you scare me like that, you deserve to die'); a few moments later I had enough self-awareness to reflect ('well that's not very nice, is it'). 
