--- a/_posts/2024-02-21-on_aging.md
+++ b/_posts/2024-02-21-on_aging.md
@@ -4,7 +4,7 @@ title: less scattered, more comprehensive, intrusive thoughts on aging and morta
 permalink: /poop/on_hypey_takes
 date: 2024/02/21
 date_updated: 2024/04/06
-published: true
+published: false
 ---
 
 Some thoughts on current trends for posterity; I'll add this to my calendar to reevaluate in 10 years time to see how they've fared.  
@@ -32,7 +32,7 @@ Is this saying that our issue of aging is largely a matter of resourcefulness? H
 
 ...
 
-If you didn't catch my sarcasm in that last line -- I'm very much joking; I strongly disagree with that premise. In fact, I'm reminded of a photo I took a picture of a text back in 2017 that conveniently illustrates a similar systems level conflation: "Why are you making so few blood cells today?" (GEB?)
+If you didn't catch my sarcasm in that last line -- I'm very much joking; I strongly disagree with that premise. In fact, I'm reminded of a photo I took a picture of a text back in 2017 that conveniently illustrates a similar systems level conflation: "Why are you making so few blood cells today?" (GEB?) Here, it seems like a sincerely baffled, 'Why isn't our physiology simply more resourceful? (Why is it so dumb?)'
 
 In a similar way that ['cancer' conflates very different phenomena](https://en.wikipedia.org/wiki/War_on_cancer), 'aging' conflates many ways of breaking. I am not convinced that this level of resolution is the most useful way to solve problems. Although I am hoping that the increased interest might eventually better highlight biology as a complex system in how it can fail in this gradual way.
 
@@ -40,11 +40,11 @@ Enjoy another claim:
 >“With the longevity field booming into a multi-trillion-dollar industry, backed by names like Jeff Bezos and corporations like Alphabet, and several companies going into human trials, aging reversal is no longer a matter of if, but when.” 
 ...So as long as you can throw money and status at it, it should work out, right? 
 
-Guess what pharmaceutical research involves? Throwing a lot of money at things ([_source_](https://www.nature.com/articles/nrd3681)): 
+Guess what pharmaceutical research involves? Throwing a lot of money at things (["Diagnosing the decline in pharmaceutical R&D efficiency" (Scannell et al, 2012)](https://www.nature.com/articles/nrd3681)): 
 
 [image of pharmaceutical decline]
 
-Maybe we need to throw more money? Maybe there wasn't enough status.  
+Maybe we need to throw even more money at it? Or maybe there wasn't enough status?  
 
 Okay now I feel like I'm strawmanning by picking on this writer. Let's try to be more productive. 
 
